// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Renders correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiContainer-root-7 WithStyles(ForwardRef(Container))-root-6 MuiContainer-maxWidthLg-13"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-9-60 MuiGrid-grid-md-8-87 MuiGrid-grid-lg-9-102"
        >
          <div
            class="MuiGrid-root-17 makeStyles-badgerIconContainer-15 MuiGrid-item-19"
          >
            <img
              alt="Badger Logo"
              class="makeStyles-badgerIcon-16"
              src="/assets/icons/badger_head.svg"
            />
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
              id="here-ref"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
                >
                  BADGER Price:  
                </span>
                <div
                  class="MuiBox-root-158 MuiBox-root-159"
                >
                  <span
                    class="MuiTypography-root-126 makeStyles-helperText-125"
                  >
                    $80.00
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
                >
                  Cycle: 
                  5894
                    
                  (last: 0h 55m)
                </span>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
                >
                  Ethereum
                   TVL:  
                </span>
                <div
                  class="MuiBox-root-158 MuiBox-root-162"
                >
                  <span
                    class="MuiTypography-root-126 makeStyles-helperText-125"
                  >
                    $1,000,000
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
                >
                  My Assets:  
                </span>
                <div
                  class="MuiBox-root-158 MuiBox-root-165"
                >
                  <span
                    class="MuiTypography-root-126 makeStyles-helperText-125"
                  >
                    $0
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-186 MuiIconButton-root-177 makeStyles-historicAPR-123"
                  tabindex="0"
                  title="Historic APR"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-185"
                  >
                    <span
                      class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
                    >
                      My APR:  
                    </span>
                    <div
                      class="MuiBox-root-158 MuiBox-root-191"
                    >
                      <span
                        class="MuiTypography-root-126 makeStyles-helperText-125"
                      >
                        0%
                      </span>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root-288"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-justify-content-xs-flex-end-36 MuiGrid-grid-xs-true-51"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-flex-end-36"
          >
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-193 MuiGrid-item-19"
            >
              <img
                alt="Discord Icon"
                class="makeStyles-socialIcon-192"
                src="/assets/icons/discord.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-193 makeStyles-twitter-194 MuiGrid-item-19"
            >
              <img
                alt="Twitter Icon"
                class="makeStyles-socialIcon-192"
                src="/assets/icons/twitter.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-126 makeStyles-helperText-125"
              >
                <a
                  class="MuiTypography-root-126 MuiLink-root-196 MuiLink-underlineHover-198 MuiTypography-colorInherit-148"
                  href="https://docs.badger.com/"
                  rel="noopener"
                  target="_blank"
                >
                  DOCS
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-governance-195 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-126 makeStyles-helperText-125"
              >
                <a
                  class="MuiTypography-root-126 MuiLink-root-196 MuiLink-underlineHover-198 MuiTypography-colorInherit-148"
                  href="https://snapshot.org/#/badgerdao.eth"
                  rel="noopener"
                  target="_blank"
                >
                  GOVERNANCE
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-126 makeStyles-helperText-125"
              >
                <a
                  class="MuiTypography-root-126 MuiLink-root-196 MuiLink-underlineHover-198 MuiTypography-colorInherit-148"
                  href="https://forum.badger.finance"
                  rel="noopener"
                  target="_blank"
                >
                  FORUM
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-actions-2"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-auto-50"
          >
            <div
              class="MuiTabs-root-204"
            >
              <div
                class="MuiTabs-scroller-209 MuiTabs-fixed-210"
                style="overflow: hidden;"
              >
                <div
                  class="MuiTabs-flexContainer-206"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218 MuiTab-selected-220"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-224"
                    >
                      VAULTS
                    </span>
                    <span
                      class="MuiTouchRipple-root-288"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-224"
                    >
                      BOOST
                    </span>
                    <span
                      class="MuiTouchRipple-root-288"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-224"
                    >
                      IBBTC
                    </span>
                    <span
                      class="MuiTouchRipple-root-288"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-225 PrivateTabIndicator-colorPrimary-226 MuiTabs-indicator-214 makeStyles-indicator-203"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-229 MuiGrid-container-18 MuiGrid-justify-content-xs-flex-end-36"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 makeStyles-button-230 makeStyles-loadingRewardsButton-232 MuiButton-outlinedPrimary-239"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-234"
                  >
                    <div
                      class="makeStyles-loaderContainer-262 makeStyles-customSizing-264"
                    >
                      <div
                        class="MuiCircularProgress-root-265 MuiCircularProgress-colorPrimary-269 MuiCircularProgress-indeterminate-267"
                        role="progressbar"
                        style="width: 15px; height: 15px;"
                      >
                        <svg
                          class="MuiCircularProgress-svg-271"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle-272 MuiCircularProgress-circleIndeterminate-274"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="20.2"
                            stroke-width="3.6"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root-288"
                  />
                </button>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <div>
                  <button
                    aria-label="open network selector"
                    class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 makeStyles-networkButton-279 MuiButton-outlinedPrimary-239"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-234"
                    >
                      <img
                        alt="selected network icon"
                        class="makeStyles-selectedNetworkIcon-280"
                        src="/assets/icons/ethereum-network.svg"
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-288"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 MuiButton-outlinedPrimary-239 MuiButton-disableElevation-244"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-234 makeStyles-walletButtonLabel-285"
                  >
                    0x1..a1a
                  </span>
                  <span
                    class="MuiTouchRipple-root-288"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders mobile version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-186 MuiIconButton-root-177 makeStyles-menuIcon-288"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-185"
            >
              <img
                alt="open menu"
                src="/assets/icons/mobile-drawer-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-310"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-289"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-290 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <div>
              <button
                aria-label="open network selector"
                class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 makeStyles-networkButton-279 MuiButton-outlinedPrimary-239"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-234"
                >
                  <img
                    alt="selected network icon"
                    class="makeStyles-selectedNetworkIcon-280"
                    src="/assets/icons/ethereum-network.svg"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-310"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 MuiButton-outlinedPrimary-239 MuiButton-disableElevation-244"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-234 makeStyles-walletButtonLabel-285"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            BADGER Price:  
          </span>
          <div
            class="MuiBox-root-158 MuiBox-root-300"
          >
            <span
              class="MuiTypography-root-126 makeStyles-helperText-125"
            >
              $80.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            Cycle: 
            5894
              
            (last: 0h 55m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-158 MuiBox-root-303"
          >
            <span
              class="MuiTypography-root-126 makeStyles-helperText-125"
            >
              $1,000,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-158 MuiBox-root-306"
          >
            <span
              class="MuiTypography-root-126 makeStyles-helperText-125"
            >
              $0
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <button
            class="MuiButtonBase-root-186 MuiIconButton-root-177 makeStyles-historicAPR-123"
            tabindex="0"
            title="Historic APR"
            type="button"
          >
            <span
              class="MuiIconButton-label-185"
            >
              <span
                class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
              >
                My APR:  
              </span>
              <div
                class="MuiBox-root-158 MuiBox-root-309"
              >
                <span
                  class="MuiTypography-root-126 makeStyles-helperText-125"
                >
                  0%
                </span>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root-310"
            />
          </button>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-204"
      >
        <div
          class="MuiTabs-scroller-209 MuiTabs-fixed-210"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-206"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218 MuiTab-selected-220 MuiTab-fullWidth-222"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-224"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218 MuiTab-fullWidth-222"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-224"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218 MuiTab-fullWidth-222"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-224"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-225 PrivateTabIndicator-colorPrimary-226 MuiTabs-indicator-214 makeStyles-indicator-203"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders tablet version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-186 MuiIconButton-root-177 makeStyles-menuIcon-288"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-185"
            >
              <img
                alt="open menu"
                src="/assets/icons/mobile-drawer-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-310"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-289"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-290 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <div>
              <button
                aria-label="open network selector"
                class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 makeStyles-networkButton-279 MuiButton-outlinedPrimary-239"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-234"
                >
                  <img
                    alt="selected network icon"
                    class="makeStyles-selectedNetworkIcon-280"
                    src="/assets/icons/ethereum-network.svg"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-310"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-186 MuiButton-root-233 MuiButton-outlined-238 MuiButton-outlinedPrimary-239 MuiButton-disableElevation-244"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-234 makeStyles-walletButtonLabel-285"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            BADGER Price:  
          </span>
          <div
            class="MuiBox-root-158 MuiBox-root-300"
          >
            <span
              class="MuiTypography-root-126 makeStyles-helperText-125"
            >
              $80.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            Cycle: 
            5894
              
            (last: 0h 55m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-158 MuiBox-root-303"
          >
            <span
              class="MuiTypography-root-126 makeStyles-helperText-125"
            >
              $1,000,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-158 MuiBox-root-306"
          >
            <span
              class="MuiTypography-root-126 makeStyles-helperText-125"
            >
              $0
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <button
            class="MuiButtonBase-root-186 MuiIconButton-root-177 makeStyles-historicAPR-123"
            tabindex="0"
            title="Historic APR"
            type="button"
          >
            <span
              class="MuiIconButton-label-185"
            >
              <span
                class="MuiTypography-root-126 makeStyles-helperText-125 MuiTypography-displayInline-154"
              >
                My APR:  
              </span>
              <div
                class="MuiBox-root-158 MuiBox-root-309"
              >
                <span
                  class="MuiTypography-root-126 makeStyles-helperText-125"
                >
                  0%
                </span>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root-310"
            />
          </button>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-204"
      >
        <div
          class="MuiTabs-scroller-209 MuiTabs-fixed-210"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-206"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218 MuiTab-selected-220"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-224"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-224"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-186 MuiTab-root-215 makeStyles-tab-202 MuiTab-textColorPrimary-218"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-224"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-310"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-225 PrivateTabIndicator-colorPrimary-226 MuiTabs-indicator-214 makeStyles-indicator-203"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
